--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -1,10 +1,13 @@
 description: 'Build Repo'
 steps:
-  - restore_cache:
-      name: 'Restore NX Cache'
-      keys:
-        - nx-cache-{{ checksum "node_modules/.nx/cache/lockfile.hash" }}
-        - nx-cache
+  # - restore_cache:
+  #     name: 'Restore NX Cache'
+  #     keys:
+  #       - nx-cache-{{ checksum "node_modules/.nx/cache/lockfile.hash" }}
+  #       - nx-cache
+  - run:
+      name: 'Reset NX Cache'
+      command: nx reset
   - run:
       name: 'Monitor NX Cache Size'
       command: ./scripts/nx/reset-cache.sh
