--- a/apps/platform-api/tsconfig.json
+++ b/apps/platform-api/tsconfig.json
@@ -12,7 +12,7 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node", "cypher", "Multer"]
+    "types": ["node", "cypher"]
   },
   "exclude": ["jest.config.ts"],
   "include": ["webpack.config.js", "src/**/*.ts"]
