--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,7 @@
     "importHelpers": true,
     "target": "es2021",
     "module": "esnext",
-    "types": ["node", "worker-loader", "Multer"],
+    "types": ["node", "worker-loader"],
     "typeRoots": ["types", "node_modules/@types"],
     "lib": ["es2017", "dom"],
     "skipLibCheck": true,
