--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,6 @@
     "jest/globals": true
   },
   "extends": [
-    "plugin:prettier/recommended",
     "plugin:canonical/recommended",
     "plugin:tailwindcss/recommended",
     "./scripts/eslint/.eslintrc.nx.json",
@@ -31,7 +30,8 @@
     "./scripts/eslint/.eslintrc.spacing.json",
     "./scripts/eslint/.eslintrc.naming.json",
     "./scripts/eslint/.eslintrc.cypress.json",
-    "./scripts/eslint/.eslintrc.codelab.json"
+    "./scripts/eslint/.eslintrc.codelab.json",
+    "plugin:prettier/recommended"
     // We first apply `typescript-sort-keys`, then comment off and manually move methods after properties
     // "plugin:typescript-sort-keys/recommended"
     // "plugin:import/recommended"
@@ -159,32 +159,32 @@
               "memberTypes": ["signature", "constructor", "field", "method"],
               // "optionalityOrder": "required-first",
               "order": "alphabetically"
+            },
+            "classes": {
+              // More important up front
+              "memberTypes": [
+                ["public-static-field", "public-static-method"],
+                "get",
+                "public-field",
+                // These are generally _async arrow syntax methods
+                "public-decorated-field",
+                "public-decorated-method",
+                "public-method",
+                [
+                  "protected-field",
+                  "protected-get",
+                  "protected-set",
+                  "protected-method"
+                ],
+                "private-static-method",
+                "private-static-field",
+                ["private-field", "private-method"],
+                // Private static used for data mapping internally
+                "private-get",
+                "private-set"
+              ],
+              "order": "alphabetically"
             }
-            // "classes": {
-            //   // More important up front
-            //   "memberTypes": [
-            //     ["public-static-field", "public-static-method"],
-            //     "get",
-            //     "public-field",
-            //     // These are generally _async arrow syntax methods
-            //     "public-decorated-field",
-            //     "public-decorated-method",
-            //     "public-method",
-            //     [
-            //       "protected-field",
-            //       "protected-get",
-            //       "protected-set",
-            //       "protected-method"
-            //     ],
-            //     "private-static-method",
-            //     "private-static-field",
-            //     ["private-field", "private-method"],
-            //     // Private static used for data mapping internally
-            //     "private-get",
-            //     "private-set"
-            //   ],
-            //   "order": "alphabetically"
-            // }
           }
         ],
         "@typescript-eslint/method-signature-style": ["error", "method"],
