--- a/nx.json
+++ b/nx.json
@@ -167,6 +167,11 @@
       "inputs": ["default", "{workspaceRoot}/.eslintrc.json"],
       "cache": true,
       "outputs": ["{options.outputFile}"]
+    },
+    "@nx/next:build": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["default", "^default"]
     }
   },
   "namedInputs": {
