--- a/package.json
+++ b/package.json
@@ -33,28 +33,28 @@
   },
   "private": true,
   "dependencies": {
-    "@ant-design/cssinjs": "^1.17.2",
-    "@ant-design/icons": "5.0.1",
-    "@ant-design/pro-components": "2.4.4",
+    "@ant-design/cssinjs": "1.18.4",
+    "@ant-design/icons": "5.3.0",
+    "@ant-design/pro-components": "2.6.49",
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
     "@auth0/nextjs-auth0": "3.1.0",
     "@codelab/eslint-plugin": "file:./dist/libs/tools/eslint-plugin",
     "@codelab/tools-workspace": "file:./dist/libs/tools/workspace",
-    "@codemirror/autocomplete": "^6.9.0",
-    "@codemirror/commands": "^6.2.4",
-    "@codemirror/lang-css": "^6.2.1",
-    "@codemirror/lang-html": "^6.4.5",
-    "@codemirror/lang-javascript": "^6.1.9",
-    "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/language": "^6.9.0",
-    "@codemirror/lint": "^6.4.0",
-    "@codemirror/search": "^6.5.1",
-    "@codemirror/state": "^6.2.1",
-    "@codemirror/view": "^6.16.0",
+    "@codemirror/autocomplete": "6.12.0",
+    "@codemirror/commands": "6.3.3",
+    "@codemirror/lang-css": "6.2.1",
+    "@codemirror/lang-html": "6.4.8",
+    "@codemirror/lang-javascript": "6.2.2",
+    "@codemirror/lang-json": "6.0.1",
+    "@codemirror/language": "6.10.1",
+    "@codemirror/lint": "6.5.0",
+    "@codemirror/search": "6.5.6",
+    "@codemirror/state": "6.4.1",
+    "@codemirror/view": "6.24.1",
     "@dnd-kit/core": "6.0.5",
-    "@dnd-kit/modifiers": "^7.0.0",
-    "@editorjs/editorjs": "^2.28.0",
+    "@dnd-kit/modifiers": "7.0.0",
+    "@editorjs/editorjs": "2.28.0",
     "@fancyapps/ui": "4.0.16",
     "@fortawesome/fontawesome-pro": "6.1.2",
     "@fortawesome/fontawesome-svg-core": "6.1.2",
@@ -65,8 +65,8 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/pro-thin-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
-    "@graphql-tools/merge": "^9.0.1",
-    "@graphql-tools/schema": "^10.0.2",
+    "@graphql-tools/merge": "9.0.1",
+    "@graphql-tools/schema": "10.0.2",
     "@graphql-tools/utils": "10.0.13",
     "@mailchimp/mailchimp_marketing": "3.0.80",
     "@neo4j/graphql": "4.4.5",
@@ -74,107 +74,106 @@
     "@nestjs/apollo": "11.0.6",
     "@nestjs/bull": "0.6.3",
     "@nestjs/common": "10.0.4",
-    "@nestjs/config": "^2.3.2",
+    "@nestjs/config": "2.3.2",
     "@nestjs/core": "10.0.4",
-    "@nestjs/cqrs": "^10.0.1",
-    "@nestjs/devtools-integration": "^0.1.5",
-    "@nestjs/graphql": "^11.0.6",
-    "@nestjs/jwt": "^10.1.1",
-    "@nestjs/microservices": "^9.4.2",
-    "@nestjs/passport": "^10.0.2",
+    "@nestjs/cqrs": "10.0.1",
+    "@nestjs/devtools-integration": "0.1.5",
+    "@nestjs/graphql": "11.0.6",
+    "@nestjs/jwt": "10.1.1",
+    "@nestjs/microservices": "9.4.2",
+    "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.0.4",
-    "@nestjs/swagger": "^7.1.2",
+    "@nestjs/swagger": "7.1.2",
     "@next/bundle-analyzer": "14.0.2",
-    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/api": "1.7.0",
     "@opentelemetry/auto-instrumentations-node": "0.41.1",
-    "@opentelemetry/auto-instrumentations-web": "^0.36.0",
-    "@opentelemetry/context-zone": "^1.21.0",
-    "@opentelemetry/core": "^1.21.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.48.0",
+    "@opentelemetry/auto-instrumentations-web": "0.36.0",
+    "@opentelemetry/context-zone": "1.21.0",
+    "@opentelemetry/core": "1.21.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "0.48.0",
     "@opentelemetry/exporter-prometheus": "0.48.0",
     "@opentelemetry/exporter-trace-otlp-http": "0.48.0",
-    "@opentelemetry/instrumentation": "^0.48.0",
-    "@opentelemetry/instrumentation-express": "^0.35.0",
-    "@opentelemetry/instrumentation-graphql": "^0.37.0",
-    "@opentelemetry/instrumentation-http": "^0.48.0",
-    "@opentelemetry/resources": "^1.21.0",
+    "@opentelemetry/instrumentation": "0.48.0",
+    "@opentelemetry/instrumentation-express": "0.35.0",
+    "@opentelemetry/instrumentation-graphql": "0.37.0",
+    "@opentelemetry/instrumentation-http": "0.48.0",
+    "@opentelemetry/resources": "1.21.0",
     "@opentelemetry/sdk-metrics": "1.21.0",
     "@opentelemetry/sdk-node": "0.48.0",
-    "@opentelemetry/sdk-trace-base": "^1.21.0",
-    "@opentelemetry/sdk-trace-node": "^1.21.0",
-    "@opentelemetry/sdk-trace-web": "^1.21.0",
+    "@opentelemetry/sdk-trace-base": "1.21.0",
+    "@opentelemetry/sdk-trace-node": "1.21.0",
+    "@opentelemetry/sdk-trace-web": "1.21.0",
     "@opentelemetry/semantic-conventions": "1.21.0",
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
-    "@react-spring/web": "^9.7.3",
-    "@rjsf/antd": "^5.15.1",
-    "@rjsf/core": "^5.15.1",
-    "@rjsf/utils": "^5.15.1",
-    "@rjsf/validator-ajv8": "^5.15.1",
+    "@react-spring/web": "9.7.3",
+    "@rjsf/antd": "5.17.1",
+    "@rjsf/core": "5.17.1",
+    "@rjsf/utils": "5.17.1",
+    "@rjsf/validator-ajv8": "5.17.1",
     "@sinclair/typebox": "0.31.23",
-    "@sotaproject/strikethrough": "^1.0.1",
+    "@sotaproject/strikethrough": "1.0.1",
     "@storybook/core-server": "7.5.3",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "0.5.3",
-    "@twind/core": "^1.1.3",
-    "@twind/preset-tailwind": "^1.1.4",
-    "@twind/with-next": "^1.2.2",
-    "@uiw/react-codemirror": "4.11.6",
-    "adm-zip": "^0.5.10",
+    "@twind/core": "1.1.3",
+    "@twind/preset-tailwind": "1.1.4",
+    "@twind/with-next": "1.2.2",
+    "@uiw/react-codemirror": "4.21.22",
+    "adm-zip": "0.5.10",
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
-    "antd": "^5.11.0",
+    "antd": "5.14.1",
     "auth0": "4.0.1",
     "axios": "1.6.7",
     "chalk": "4.1.2",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "classnames": "^2.3.2",
-    "cm6-graphql": "^0.0.9",
-    "core-js": "3.20.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
+    "classnames": "2.3.2",
+    "cm6-graphql": "0.0.9",
     "cross-fetch": "3.1.4",
     "csv-parser": "3.0.0",
-    "diff": "^5.1.0",
-    "dir-compare": "^4.2.0",
-    "editorjs-react-renderer": "^3.5.1",
-    "editorjs-text-color-plugin": "^2.0.4",
+    "diff": "5.1.0",
+    "dir-compare": "4.2.0",
+    "editorjs-react-renderer": "3.5.1",
+    "editorjs-text-color-plugin": "2.0.4",
     "env-var": "7.4.1",
-    "express": "^4.18.2",
-    "flat": "^5.0.2",
+    "express": "4.18.2",
+    "flat": "5.0.2",
     "framer-motion": "6.3.3",
     "graphql": "16.6.0",
     "graphql-iso-date": "3.6.1",
     "graphql-request": "6.1.0",
     "graphql-type-json": "0.3.2",
-    "immutable": "^4.1.0",
-    "isolated-vm": "^4.6.0",
-    "isomorphic-fetch": "^3.0.0",
-    "jest-text-transformer": "^1.0.4",
-    "joi": "^17.9.2",
+    "immutable": "4.1.0",
+    "isolated-vm": "4.6.0",
+    "isomorphic-fetch": "3.0.0",
+    "jest-text-transformer": "1.0.4",
+    "joi": "17.9.2",
     "jquery": "3.6.4",
-    "jwks-rsa": "^3.0.1",
+    "jwks-rsa": "3.0.1",
     "lodash": "4.17.21",
-    "memfs": "^4.2.0",
-    "micro": "^10.0.1",
+    "memfs": "4.2.0",
+    "micro": "10.0.1",
     "mobx": "6.11.0",
     "mobx-keystone": "1.9.0",
     "mobx-react-lite": "4.0.5",
     "mobx-utils": "6.0.8",
     "moment": "2.29.4",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.5-lts.1",
     "neo4j-driver": "5.16.0",
-    "nestjs-pino": "^3.2.0",
-    "next": "14.0.4",
-    "next-http-proxy-middleware": "^1.2.6",
+    "nestjs-pino": "3.2.0",
+    "next": "14.1.0",
+    "next-http-proxy-middleware": "1.2.6",
     "next-seo": "5.15.0",
     "node-fetch": "3.1.0",
-    "object-typed": "^1.0.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pino": "^8.14.1",
-    "pino-http": "^8.3.3",
+    "object-typed": "1.0.0",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
+    "pino": "8.14.1",
+    "pino-http": "8.3.3",
     "prettier": "2.8.8",
     "puppeteer": "20.1.1",
     "ramda": "0.29.0",
@@ -182,36 +181,36 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-drag-listview": "2.0.0",
-    "react-error-boundary": "^3.1.4",
+    "react-error-boundary": "3.1.4",
     "react-grid-layout": "1.4.2",
     "react-helmet": "6.1.0",
     "react-hook-form": "7.30.0",
-    "react-hotjar": "^5.3.0",
+    "react-hotjar": "5.3.0",
     "react-hotkeys-hook": "3.4.4",
     "react-is": "18.2.0",
     "react-quill": "2.0.0",
     "react-resizable": "3.0.4",
-    "react-resizable-panels": "^0.0.36",
+    "react-resizable-panels": "0.0.36",
     "react-responsive": "9.0.0-beta.10",
     "react-slick": "0.29.0",
-    "react-sticky-box": "^2.0.0",
+    "react-sticky-box": "2.0.0",
     "react-stickynode": "4.1.0",
     "react-syntax-highlighter": "15.5.0",
     "recoil": "0.7.4",
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
-    "rxjs": "^7.8.0",
-    "styled-components": "^6.0.7",
-    "styled-jsx": "^5.1.2",
-    "stylis": "^4.0.0",
-    "sucrase": "^3.32.0",
-    "supertest": "^6.3.3",
-    "tar": "^6.1.13",
-    "ts-json-schema-generator": "^1.2.0",
+    "rxjs": "7.8.0",
+    "styled-components": "6.0.7",
+    "styled-jsx": "5.1.2",
+    "stylis": "4.0.0",
+    "sucrase": "3.32.0",
+    "supertest": "6.3.3",
+    "tar": "6.1.13",
+    "ts-json-schema-generator": "1.2.0",
     "tslib": "2.3.1",
-    "twind": "^0.16.19",
+    "twind": "0.16.19",
     "typebox-validators": "0.3.5",
-    "typescript-json-schema": "^0.55.0",
+    "typescript-json-schema": "0.55.0",
     "uniforms": "3.10.2",
     "uniforms-antd": "3.10.2",
     "uniforms-bridge-json-schema": "3.10.2",
@@ -225,17 +224,17 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
-    "@editorjs/checklist": "^1.5.0",
-    "@editorjs/code": "^2.8.0",
-    "@editorjs/delimiter": "^1.3.0",
-    "@editorjs/header": "^2.7.0",
-    "@editorjs/inline-code": "^1.4.0",
-    "@editorjs/link": "^2.5.0",
-    "@editorjs/list": "^1.8.0",
-    "@editorjs/marker": "^1.3.0",
-    "@editorjs/paragraph": "^2.10.0",
-    "@editorjs/quote": "^2.5.0",
-    "@editorjs/underline": "^1.1.0",
+    "@editorjs/checklist": "1.5.0",
+    "@editorjs/code": "2.8.0",
+    "@editorjs/delimiter": "1.3.0",
+    "@editorjs/header": "2.7.0",
+    "@editorjs/inline-code": "1.4.0",
+    "@editorjs/link": "2.5.0",
+    "@editorjs/list": "1.8.0",
+    "@editorjs/marker": "1.3.0",
+    "@editorjs/paragraph": "2.10.0",
+    "@editorjs/quote": "2.5.0",
+    "@editorjs/underline": "1.1.0",
     "@graphql-codegen/cli": "4.0.1",
     "@graphql-codegen/import-types-preset": "2.2.6",
     "@graphql-codegen/near-operation-file-preset": "2.5.0",
@@ -245,10 +244,10 @@
     "@graphql-codegen/typescript-document-nodes": "4.0.0",
     "@graphql-codegen/typescript-graphql-request": "5.0.0",
     "@graphql-codegen/typescript-operations": "4.0.0",
-    "@graphql-eslint/eslint-plugin": "^3.20.1",
+    "@graphql-eslint/eslint-plugin": "3.20.1",
     "@hon2a/cypress-without": "2.1.0",
     "@ls-lint/ls-lint": "2.0.0",
-    "@nestjs/cli": "^10.0.2",
+    "@nestjs/cli": "10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
     "@nx/cypress": "18.0.4",
@@ -278,25 +277,25 @@
     "@swc-node/register": "1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.92",
-    "@swc/jest": "^0.2.29",
-    "@swc/plugin-styled-components": "^1.5.67",
+    "@swc/jest": "0.2.29",
+    "@swc/plugin-styled-components": "1.5.67",
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "9.2.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "14.1.2",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.4.3",
-    "@types/adm-zip": "^0.5.0",
+    "@types/adm-zip": "0.5.0",
     "@types/auth0": "3.3.6",
-    "@types/aws-lambda": "^8.10.116",
-    "@types/buble": "^0.20.1",
-    "@types/chance": "^1.1.4",
+    "@types/aws-lambda": "8.10.116",
+    "@types/buble": "0.20.1",
+    "@types/chance": "1.1.4",
     "@types/concurrently": "6.4.0",
-    "@types/cookie": "^0.5.1",
-    "@types/diff": "^5.0.3",
+    "@types/cookie": "0.5.1",
+    "@types/diff": "5.0.3",
     "@types/express": "4.17.21",
-    "@types/flat": "^5.0.2",
-    "@types/glob": "^8.1.0",
+    "@types/flat": "5.0.2",
+    "@types/glob": "8.1.0",
     "@types/graphql-iso-date": "3.4.0",
     "@types/inquirer": "8.2.1",
     "@types/jest": "29.5.2",
@@ -305,11 +304,11 @@
     "@types/json2csv": "5.0.3",
     "@types/jwt-decode": "3.1.0",
     "@types/lodash": "4.14.186",
-    "@types/mailchimp__mailchimp_marketing": "^3.0.8",
-    "@types/multer": "^1.4.11",
+    "@types/mailchimp__mailchimp_marketing": "3.0.8",
+    "@types/multer": "1.4.11",
     "@types/node": "18.14.2",
-    "@types/passport-jwt": "^3.0.9",
-    "@types/passport-local": "^1.0.35",
+    "@types/passport-jwt": "3.0.9",
+    "@types/passport-local": "1.0.35",
     "@types/prettier": "2.7.3",
     "@types/ramda": "0.29.2",
     "@types/react": "18.2.33",
@@ -321,11 +320,11 @@
     "@types/react-slick": "0.23.10",
     "@types/react-stickynode": "4.0.0",
     "@types/react-syntax-highlighter": "15.5.4",
-    "@types/scroll-into-view": "^1.16.0",
+    "@types/scroll-into-view": "1.16.0",
     "@types/stringify-object": "4.0.1",
     "@types/styled-components": "5.1.26",
-    "@types/supertest": "^2.0.16",
-    "@types/tar": "^6.1.4",
+    "@types/supertest": "2.0.16",
+    "@types/tar": "6.1.4",
     "@types/testing-library__cypress": "5.0.9",
     "@types/testing-library__jest-dom": "5.14.6",
     "@types/uuid": "8.3.4",
@@ -337,20 +336,21 @@
     "@typescript-eslint/parser": "6.21.0",
     "@welldone-software/why-did-you-render": "7.0.1",
     "ajv-formats": "2.1.1",
-    "ajv-keywords": "^5.1.0",
+    "ajv-keywords": "5.1.0",
     "autoprefixer": "10.4.14",
-    "chance": "^1.1.11",
+    "babel-plugin-styled-components": "1.10.7",
+    "chance": "1.1.11",
     "commitizen": "4.2.5",
     "commitlint-config-cz": "0.13.3",
     "commitlint-plugin-function-rules": "1.7.1",
     "concurrently": "7.0.0",
-    "cookie": "^0.5.0",
+    "cookie": "0.5.0",
     "cross-env": "7.0.3",
-    "cypress": "^13.3.0",
-    "cypress-jest-adapter": "^0.1.1",
-    "cypress-log-to-output": "^1.1.2",
-    "cypress-multi-reporters": "^1.6.3",
-    "cypress-terminal-report": "^5.1.1",
+    "cypress": "13.3.0",
+    "cypress-jest-adapter": "0.1.1",
+    "cypress-log-to-output": "1.1.2",
+    "cypress-multi-reporters": "1.6.3",
+    "cypress-terminal-report": "5.1.1",
     "cz-customizable": "6.3.0",
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
@@ -359,11 +359,11 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-airbnb-typescript-prettier": "5.0.0",
-    "eslint-config-next": "14.0.2",
+    "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-canonical": "^4.15.1",
+    "eslint-plugin-canonical": "4.15.1",
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-deprecate-import": "2.0.0",
     "eslint-plugin-import": "2.29.0",
@@ -371,53 +371,53 @@
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-jsdoc": "46.9.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-lodash": "^7.4.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-lodash": "7.4.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-exports": "0.8.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-typescript-sort-keys": "^3.1.0",
-    "eslint-plugin-unicorn": "^49.0.0",
+    "eslint-plugin-tailwindcss": "3.14.2",
+    "eslint-plugin-typescript-sort-keys": "3.1.0",
+    "eslint-plugin-unicorn": "49.0.0",
     "eslint-plugin-unused-imports": "3.0.0",
     "execa": "5.1.1",
-    "futoin-hkdf": "^1.4.3",
+    "futoin-hkdf": "1.4.3",
     "git-changed-files": "1.0.0",
     "globby": "11.1.0",
-    "husky": "^8.0.0",
+    "husky": "8.0.0",
     "inquirer": "8.2.2",
     "is-port-reachable": "3.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "29.7.0",
-    "jest-junit": "^16.0.0",
+    "jest-junit": "16.0.0",
     "jest-transform-stub": "2.0.0",
     "jose": "4.14.4",
     "json-schema": "0.4.0",
-    "jsonc-eslint-parser": "^2.4.0",
+    "jsonc-eslint-parser": "2.4.0",
     "jwt-decode": "3.1.2",
-    "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
     "nx": "18.0.4",
     "nx-cloud": "18.0.0",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
-    "storybook-css-modules": "^1.0.8",
-    "tailwindcss": "3.3.5",
+    "storybook-css-modules": "1.0.8",
+    "tailwindcss": "3.4.1",
     "ts-essentials": "9.1.2",
     "ts-jest": "29.1.0",
-    "ts-morph": "^19.0.0",
+    "ts-morph": "19.0.0",
     "ts-node": "10.9.1",
     "typescript": "5.3.3",
     "utility-types": "3.10.0",
     "wait-on": "6.0.1"
   },
   "resolutions": {
-    "@codemirror/state": "^6.2.1",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "antd@5.4.2": "patch:antd@npm%3A5.4.2#./.yarn/patches/antd-npm-5.4.2-0091a657e9.patch",
     "cypress@*": "patch:cypress@npm%3A13.3.0#./.yarn/patches/cypress-npm-13.3.0-c09c0b93ba.patch",
     "cypress@^13.3.0": "patch:cypress@npm%3A13.3.0#./.yarn/patches/cypress-npm-13.3.0-c09c0b93ba.patch"
