--- a/libs/backend/infra/adapter/neo4j/tsconfig.json
+++ b/libs/backend/infra/adapter/neo4j/tsconfig.json
@@ -14,6 +14,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noFallthroughCasesInSwitch": true
   }
 }
