--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "graphql-request": "6.1.0",
     "graphql-type-json": "0.3.2",
     "immutable": "4.1.0",
-    "isolated-vm": "4.6.0",
+    "isolated-vm": "^4.7.2",
     "isomorphic-fetch": "3.0.0",
     "jest-text-transformer": "1.0.4",
     "joi": "17.9.2",
@@ -306,7 +306,7 @@
     "@types/lodash": "4.14.186",
     "@types/mailchimp__mailchimp_marketing": "3.0.8",
     "@types/multer": "1.4.11",
-    "@types/node": "18.14.2",
+    "@types/node": "18.16.9",
     "@types/passport-jwt": "3.0.9",
     "@types/passport-local": "1.0.35",
     "@types/prettier": "2.7.3",
@@ -390,7 +390,7 @@
     "husky": "8.0.0",
     "inquirer": "8.2.2",
     "is-port-reachable": "3.1.0",
-    "jest": "29.7.0",
+    "jest": "30.0.0-alpha.3",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "29.7.0",
     "jest-junit": "16.0.0",
