--- a/libs/frontend/domain/element/project.json
+++ b/libs/frontend/domain/element/project.json
@@ -52,10 +52,9 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/frontend/domain/element/jest.config.ts",
-        "parallel": 3,
-        "runInBand": true
+        "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
+        "jestConfig": "libs/frontend/domain/element/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -77,9 +76,8 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/frontend/domain/element/jest.config.ts",
-        "runInBand": true
+        "testPathIgnorePatterns": ["i.spec.ts"],
+        "jestConfig": "libs/frontend/domain/element/jest.config.ts"
       },
       "configurations": {
         "dev": {
