--- a/libs/shared/data/seed/project.json
+++ b/libs/shared/data/seed/project.json
@@ -24,7 +24,8 @@
       "executor": "@nx/jest:jest",
       "options": {
         "jestConfig": "libs/shared/data/seed/jest.config.ts",
-        "reporters": ["default"]
+        "reporters": ["default"],
+        "runInBand": true
       },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     },
@@ -34,6 +35,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
         "jestConfig": "libs/shared/data/seed/jest.config.ts"
       },
       "configurations": {
@@ -56,7 +58,7 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
+        "testPathIgnorePatterns": ["i.spec.ts"],
         "jestConfig": "libs/shared/data/seed/jest.config.ts"
       },
       "configurations": {
