--- a/libs/shared/utils/project.json
+++ b/libs/shared/utils/project.json
@@ -22,7 +22,8 @@
       "outputs": ["{workspaceRoot}/coverage/libs/shared/utils"],
       "options": {
         "jestConfig": "libs/shared/utils/jest.config.ts",
-        "reporters": ["default"]
+        "reporters": ["default"],
+        "runInBand": true
       }
     },
     "test:integration": {
@@ -31,6 +32,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
         "jestConfig": "libs/shared/utils/jest.config.ts"
       },
       "configurations": {
@@ -53,7 +55,7 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
+        "testPathIgnorePatterns": ["i.spec.ts"],
         "jestConfig": "libs/shared/utils/jest.config.ts"
       },
       "configurations": {
