--- a/apps/cli/project.json
+++ b/apps/cli/project.json
@@ -56,7 +56,8 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/cli/jest.config.ts",
-        "reporters": ["default"]
+        "reporters": ["default"],
+        "runInBand": true
       }
     },
     "test:integration": {
@@ -65,6 +66,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
         "jestConfig": "apps/cli/jest.config.ts"
       },
       "configurations": {
@@ -87,7 +89,7 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
+        "testPathIgnorePatterns": ["i.spec.ts"],
         "jestConfig": "apps/cli/jest.config.ts"
       },
       "configurations": {
