--- a/libs/backend/application/admin/project.json
+++ b/libs/backend/application/admin/project.json
@@ -24,6 +24,7 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/backend/application/admin/jest.config.ts",
+        "runInBand": true,
         "reporters": ["default"]
       }
     },
@@ -33,6 +34,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
         "jestConfig": "libs/backend/application/admin/jest.config.ts"
       },
       "configurations": {
@@ -55,7 +57,7 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
+        "testPathIgnorePatterns": ["i.spec.ts"],
         "jestConfig": "libs/backend/application/admin/jest.config.ts"
       },
       "configurations": {
