--- a/libs/frontend/application/dnd/project.json
+++ b/libs/frontend/application/dnd/project.json
@@ -31,7 +31,8 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/frontend/application/dnd/jest.config.ts",
-        "reporters": ["default"]
+        "reporters": ["default"],
+        "runInBand": true
       }
     },
     "test:integration": {
@@ -40,6 +41,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
         "jestConfig": "libs/frontend/application/dnd/jest.config.ts"
       },
       "configurations": {
@@ -62,7 +64,7 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
+        "testPathIgnorePatterns": ["i.spec.ts"],
         "jestConfig": "libs/frontend/application/dnd/jest.config.ts"
       },
       "configurations": {
