--- a/libs/frontend/application/renderer/project.json
+++ b/libs/frontend/application/renderer/project.json
@@ -42,8 +42,8 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
-        "jestConfig": "libs/frontend/application/renderer/jest.config.ts",
-        "runInBand": true
+        "runInBand": true,
+        "jestConfig": "libs/frontend/application/renderer/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -65,9 +65,8 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/frontend/application/renderer/jest.config.ts",
-        "runInBand": true
+        "testPathIgnorePatterns": ["i.spec.ts"],
+        "jestConfig": "libs/frontend/application/renderer/jest.config.ts"
       },
       "configurations": {
         "dev": {
