--- a/libs/frontend/domain/app/project.json
+++ b/libs/frontend/domain/app/project.json
@@ -24,7 +24,8 @@
       "outputs": ["{workspaceRoot}/coverage/libs/frontend/domain/app"],
       "options": {
         "jestConfig": "libs/frontend/domain/app/jest.config.ts",
-        "reporters": ["default"]
+        "reporters": ["default"],
+        "runInBand": true
       }
     },
     "test:integration": {
@@ -33,6 +34,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
         "jestConfig": "libs/frontend/domain/app/jest.config.ts"
       },
       "configurations": {
@@ -55,7 +57,7 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
+        "testPathIgnorePatterns": ["i.spec.ts"],
         "jestConfig": "libs/frontend/domain/app/jest.config.ts"
       },
       "configurations": {
