--- a/libs/tools/workspace/project.json
+++ b/libs/tools/workspace/project.json
@@ -68,7 +68,8 @@
       "executor": "@nx/jest:jest",
       "options": {
         "jestConfig": "libs/tools/workspace/jest.config.ts",
-        "reporters": ["default"]
+        "reporters": ["default"],
+        "runInBand": true
       },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     },
@@ -78,6 +79,7 @@
         "memoryLimit": 8192,
         "color": true,
         "testPathPattern": ["[i].spec.ts"],
+        "runInBand": true,
         "jestConfig": "libs/tools/workspace/jest.config.ts"
       },
       "configurations": {
@@ -100,7 +102,7 @@
         "color": true,
         "memoryLimit": 8192,
         "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
+        "testPathIgnorePatterns": ["i.spec.ts"],
         "jestConfig": "libs/tools/workspace/jest.config.ts"
       },
       "configurations": {
