--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -385,8 +385,7 @@
       "@codelab/shared/infra/otel": ["libs/shared/infra/otel/src/index.ts"],
       "@codelab/shared/utils": ["libs/shared/utils/src/index.ts"],
       "@codelab/tools-workspace": ["libs/tools/workspace/src/index.ts"],
-      "@codelab/tools/eslint-plugin": ["libs/tools/eslint-plugin/src/index.ts"],
-      "test": ["test/src/index.ts"]
+      "@codelab/tools/eslint-plugin": ["libs/tools/eslint-plugin/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp", "dist"],
