ci: fix cache step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ commands:
     steps:
       - restore_cache:
           keys:
-            - nx-cache-{{ checksum "node_modules/.nx/cache/lockfile.hash" }}
+            - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
             - nx-cache
           name: Restore NX Cache
       - run:
@@ -12,7 +12,7 @@ commands:
           name: Monitor NX Cache Size
       - run: npx nx run-many --target=build --projects=platform,platform-api,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
       - save_cache:
-          key: nx-cache-{{ checksum "node_modules/.nx/cache/lockfile.hash" }}
+          key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
           name: Save Cache
           paths:
             - ~/project/dist/apps/platform/.next/cache
