--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -3,7 +3,7 @@ steps:
   - restore_cache:
       name: 'Restore NX Cache'
       keys:
-        - nx-cache-{{ checksum "node_modules/.nx/cache/lockfile.hash" }}
+        - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
         - nx-cache
   # - run:
   #     name: 'Reset NX Cache'
@@ -15,7 +15,7 @@ steps:
   - run: npx nx run-many --target=build --projects=platform,platform-api,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
   - save_cache:
       name: 'Save Cache'
-      key: nx-cache-{{ checksum "node_modules/.nx/cache/lockfile.hash" }}
+      key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
       paths:
         - ~/project/dist/apps/platform/.next/cache
         - ~/project/dist/apps/landing/.next/cache
