ci: fix test step
ci: fix test step

--- a/apps/cli/project.json
+++ b/apps/cli/project.json
@@ -65,7 +65,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "apps/cli/jest.config.ts"
       },
