--- a/libs/backend/application/store/project.json
+++ b/libs/backend/application/store/project.json
@@ -33,7 +33,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "libs/backend/application/store/jest.config.ts"
       },
