--- a/libs/backend/domain/auth-guard/project.json
+++ b/libs/backend/domain/auth-guard/project.json
@@ -47,7 +47,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "libs/backend/domain/auth-guard/jest.config.ts"
       },
