--- a/apps/platform/project.json
+++ b/apps/platform/project.json
@@ -93,7 +93,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "apps/platform/jest.config.ts"
       },
