--- a/libs/frontend/application/redirect/project.json
+++ b/libs/frontend/application/redirect/project.json
@@ -47,7 +47,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "libs/frontend/application/redirect/jest.config.ts"
       },
