--- a/libs/frontend/domain/element/project.json
+++ b/libs/frontend/domain/element/project.json
@@ -52,7 +52,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "libs/frontend/domain/element/jest.config.ts"
       },
