--- a/libs/shared/domain/model/project.json
+++ b/libs/shared/domain/model/project.json
@@ -34,7 +34,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "libs/shared/domain/model/jest.config.ts"
       },
