--- a/libs/shared/utils/project.json
+++ b/libs/shared/utils/project.json
@@ -31,7 +31,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "libs/shared/utils/jest.config.ts"
       },
