--- a/libs/tools/workspace/project.json
+++ b/libs/tools/workspace/project.json
@@ -78,7 +78,7 @@
       "options": {
         "memoryLimit": 8192,
         "color": true,
-        "testPathPattern": ["[i].spec.ts"],
+        "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
         "jestConfig": "libs/tools/workspace/jest.config.ts"
       },
