--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codelab",
   "engines": {
-    "node": "18.17.0",
+    "node": ">=18.17.0",
     "npm": "please-use-yarn",
     "pnpm": "please-use-yarn"
   },
@@ -17,7 +17,7 @@
     "tunnel": "ngrok http --region=us --hostname=api.codelab-dev.ngrok.io 127.0.0.1:3000",
     "codegen": "yarn cli tasks codegen --stage dev",
     "build": "nx run-many --all --target=build",
-    "test": "nx run-many --all --target=test",
+    "test": "nx run-many --all --target=test --parallel=5",
     "test:unit": "nx run-many --all --target=test:unit --parallel=5",
     "test:integration": "nx run-many --all --target=test:integration --parallel=5",
     "lint": "nx run-many --all --target=lint --parallel=5 --quiet",
@@ -33,25 +33,25 @@
   },
   "private": true,
   "dependencies": {
-    "@ant-design/cssinjs": "1.18.4",
-    "@ant-design/icons": "5.3.0",
-    "@ant-design/pro-components": "2.6.49",
+    "@ant-design/cssinjs": "1.17.2",
+    "@ant-design/icons": "5.0.1",
+    "@ant-design/pro-components": "2.4.4",
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
     "@auth0/nextjs-auth0": "3.1.0",
     "@codelab/eslint-plugin": "file:./dist/libs/tools/eslint-plugin",
     "@codelab/tools-workspace": "file:./dist/libs/tools/workspace",
-    "@codemirror/autocomplete": "6.12.0",
-    "@codemirror/commands": "6.3.3",
+    "@codemirror/autocomplete": "6.9.0",
+    "@codemirror/commands": "6.2.4",
     "@codemirror/lang-css": "6.2.1",
-    "@codemirror/lang-html": "6.4.8",
-    "@codemirror/lang-javascript": "6.2.2",
+    "@codemirror/lang-html": "6.4.5",
+    "@codemirror/lang-javascript": "6.1.9",
     "@codemirror/lang-json": "6.0.1",
-    "@codemirror/language": "6.10.1",
-    "@codemirror/lint": "6.5.0",
-    "@codemirror/search": "6.5.6",
-    "@codemirror/state": "6.4.1",
-    "@codemirror/view": "6.24.1",
+    "@codemirror/language": "6.9.0",
+    "@codemirror/lint": "6.4.0",
+    "@codemirror/search": "6.5.1",
+    "@codemirror/state": "6.2.1",
+    "@codemirror/view": "6.16.0",
     "@dnd-kit/core": "6.0.5",
     "@dnd-kit/modifiers": "7.0.0",
     "@editorjs/editorjs": "2.28.0",
@@ -65,9 +65,8 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/pro-thin-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
-    "@graphql-tools/merge": "9.0.1",
-    "@graphql-tools/schema": "10.0.2",
-    "@graphql-tools/utils": "10.0.13",
+    "@graphql-tools/merge": "8.2.11",
+    "@graphql-tools/utils": "8.12.0",
     "@mailchimp/mailchimp_marketing": "3.0.80",
     "@neo4j/graphql": "4.4.5",
     "@neo4j/graphql-ogm": "4.4.5",
@@ -85,33 +84,33 @@
     "@nestjs/platform-express": "10.0.4",
     "@nestjs/swagger": "7.1.2",
     "@next/bundle-analyzer": "14.0.2",
-    "@opentelemetry/api": "1.7.0",
-    "@opentelemetry/auto-instrumentations-node": "0.41.1",
-    "@opentelemetry/auto-instrumentations-web": "0.36.0",
-    "@opentelemetry/context-zone": "1.21.0",
-    "@opentelemetry/core": "1.21.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "0.48.0",
-    "@opentelemetry/exporter-prometheus": "0.48.0",
-    "@opentelemetry/exporter-trace-otlp-http": "0.48.0",
-    "@opentelemetry/instrumentation": "0.48.0",
-    "@opentelemetry/instrumentation-express": "0.35.0",
-    "@opentelemetry/instrumentation-graphql": "0.37.0",
-    "@opentelemetry/instrumentation-http": "0.48.0",
-    "@opentelemetry/resources": "1.21.0",
-    "@opentelemetry/sdk-metrics": "1.21.0",
-    "@opentelemetry/sdk-node": "0.48.0",
-    "@opentelemetry/sdk-trace-base": "1.21.0",
-    "@opentelemetry/sdk-trace-node": "1.21.0",
-    "@opentelemetry/sdk-trace-web": "1.21.0",
-    "@opentelemetry/semantic-conventions": "1.21.0",
+    "@opentelemetry/api": "1.4.1",
+    "@opentelemetry/auto-instrumentations-node": "0.38.0",
+    "@opentelemetry/auto-instrumentations-web": "0.34.0",
+    "@opentelemetry/context-zone": "1.18.1",
+    "@opentelemetry/core": "1.15.2",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "0.45.1",
+    "@opentelemetry/exporter-prometheus": "0.41.2",
+    "@opentelemetry/exporter-trace-otlp-http": "0.41.2",
+    "@opentelemetry/instrumentation": "0.41.2",
+    "@opentelemetry/instrumentation-express": "0.33.0",
+    "@opentelemetry/instrumentation-graphql": "0.35.0",
+    "@opentelemetry/instrumentation-http": "0.41.2",
+    "@opentelemetry/resources": "1.15.2",
+    "@opentelemetry/sdk-metrics": "1.15.2",
+    "@opentelemetry/sdk-node": "0.41.2",
+    "@opentelemetry/sdk-trace-base": "1.15.2",
+    "@opentelemetry/sdk-trace-node": "1.15.2",
+    "@opentelemetry/sdk-trace-web": "1.18.1",
+    "@opentelemetry/semantic-conventions": "1.15.2",
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
-    "@rjsf/antd": "5.17.1",
-    "@rjsf/core": "5.17.1",
-    "@rjsf/utils": "5.17.1",
-    "@rjsf/validator-ajv8": "5.17.1",
+    "@rjsf/antd": "5.15.1",
+    "@rjsf/core": "5.15.1",
+    "@rjsf/utils": "5.15.1",
+    "@rjsf/validator-ajv8": "5.15.1",
     "@sinclair/typebox": "0.31.23",
     "@sotaproject/strikethrough": "1.0.1",
     "@storybook/core-server": "7.5.3",
@@ -120,18 +119,22 @@
     "@twind/core": "1.1.3",
     "@twind/preset-tailwind": "1.1.4",
     "@twind/with-next": "1.2.2",
-    "@uiw/react-codemirror": "4.21.22",
+    "@types/multer": "1.4.11",
+    "@uiw/react-codemirror": "4.11.6",
+    "@vercel/analytics": "1.0.1",
+    "@vercel/otel": "0.3.0",
     "adm-zip": "0.5.10",
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
-    "antd": "5.14.1",
+    "antd": "5.11.0",
     "auth0": "4.0.1",
-    "axios": "1.6.7",
+    "axios": "1.5.0",
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "classnames": "2.3.2",
     "cm6-graphql": "0.0.9",
+    "core-js": "3.20.2",
     "cross-fetch": "3.1.4",
     "csv-parser": "3.0.0",
     "diff": "5.1.0",
@@ -139,7 +142,6 @@
     "editorjs-react-renderer": "3.5.1",
     "editorjs-text-color-plugin": "2.0.4",
     "env-var": "7.4.1",
-    "express": "4.18.2",
     "flat": "5.0.2",
     "framer-motion": "6.3.3",
     "graphql": "16.6.0",
@@ -147,7 +149,7 @@
     "graphql-request": "6.1.0",
     "graphql-type-json": "0.3.2",
     "immutable": "4.1.0",
-    "isolated-vm": "^4.7.2",
+    "isolated-vm": "4.6.0",
     "isomorphic-fetch": "3.0.0",
     "jest-text-transformer": "1.0.4",
     "joi": "17.9.2",
@@ -164,7 +166,7 @@
     "multer": "1.4.5-lts.1",
     "neo4j-driver": "5.16.0",
     "nestjs-pino": "3.2.0",
-    "next": "14.1.0",
+    "next": "13.5.3",
     "next-http-proxy-middleware": "1.2.6",
     "next-seo": "5.15.0",
     "node-fetch": "3.1.0",
@@ -250,21 +252,21 @@
     "@nestjs/cli": "10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "18.0.4",
-    "@nx/devkit": "18.0.4",
-    "@nx/eslint": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/js": "18.0.4",
-    "@nx/nest": "18.0.4",
-    "@nx/next": "18.0.4",
-    "@nx/node": "18.0.4",
-    "@nx/plugin": "18.0.4",
-    "@nx/react": "18.0.4",
-    "@nx/storybook": "18.0.4",
-    "@nx/web": "18.0.4",
-    "@nx/webpack": "18.0.4",
-    "@nx/workspace": "18.0.4",
+    "@nx/cypress": "17.1.1",
+    "@nx/devkit": "17.1.1",
+    "@nx/eslint": "17.1.1",
+    "@nx/eslint-plugin": "17.1.1",
+    "@nx/jest": "17.1.1",
+    "@nx/js": "17.1.1",
+    "@nx/nest": "17.1.1",
+    "@nx/next": "17.1.1",
+    "@nx/node": "17.1.1",
+    "@nx/plugin": "17.1.1",
+    "@nx/react": "17.1.1",
+    "@nx/storybook": "17.1.1",
+    "@nx/web": "17.1.1",
+    "@nx/webpack": "17.1.1",
+    "@nx/workspace": "17.1.1",
     "@storybook/addon-essentials": "7.5.3",
     "@storybook/addon-interactions": "7.5.3",
     "@storybook/core-common": "7.5.3",
@@ -274,7 +276,7 @@
     "@storybook/test-runner": "0.14.0",
     "@storybook/testing-library": "0.2.2",
     "@svgr/webpack": "8.0.1",
-    "@swc-node/register": "1.8.0",
+    "@swc-node/register": "1.6.8",
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.92",
     "@swc/jest": "0.2.29",
@@ -293,9 +295,8 @@
     "@types/concurrently": "6.4.0",
     "@types/cookie": "0.5.1",
     "@types/diff": "5.0.3",
-    "@types/express": "4.17.21",
+    "@types/express": "4.17.13",
     "@types/flat": "5.0.2",
-    "@types/glob": "8.1.0",
     "@types/graphql-iso-date": "3.4.0",
     "@types/inquirer": "8.2.1",
     "@types/jest": "29.5.2",
@@ -305,8 +306,7 @@
     "@types/jwt-decode": "3.1.0",
     "@types/lodash": "4.14.186",
     "@types/mailchimp__mailchimp_marketing": "3.0.8",
-    "@types/multer": "1.4.11",
-    "@types/node": "18.16.9",
+    "@types/node": "18.14.2",
     "@types/passport-jwt": "3.0.9",
     "@types/passport-local": "1.0.35",
     "@types/prettier": "2.7.3",
@@ -332,12 +332,14 @@
     "@types/wait-on": "5.3.1",
     "@types/webpack": "5.28.0",
     "@types/yargs": "17.0.24",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "@vercel/remote-nx": "1.1.1",
     "@welldone-software/why-did-you-render": "7.0.1",
     "ajv-formats": "2.1.1",
     "ajv-keywords": "5.1.0",
     "autoprefixer": "10.4.14",
+    "babel-jest": "29.4.1",
     "babel-plugin-styled-components": "1.10.7",
     "chance": "1.1.11",
     "commitizen": "4.2.5",
@@ -346,7 +348,7 @@
     "concurrently": "7.0.0",
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
-    "cypress": "13.6.6",
+    "cypress": "13.3.0",
     "cypress-jest-adapter": "0.1.1",
     "cypress-log-to-output": "1.1.2",
     "cypress-multi-reporters": "1.6.3",
@@ -355,11 +357,11 @@
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
     "esbuild": "0.19.5",
-    "eslint": "8.48.0",
+    "eslint": "8.53.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-airbnb-typescript-prettier": "5.0.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -379,7 +381,7 @@
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-exports": "0.8.0",
-    "eslint-plugin-tailwindcss": "3.14.2",
+    "eslint-plugin-tailwindcss": "3.13.0",
     "eslint-plugin-typescript-sort-keys": "3.1.0",
     "eslint-plugin-unicorn": "49.0.0",
     "eslint-plugin-unused-imports": "3.0.0",
@@ -390,7 +392,7 @@
     "husky": "8.0.0",
     "inquirer": "8.2.2",
     "is-port-reachable": "3.1.0",
-    "jest": "30.0.0-alpha.3",
+    "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "29.7.0",
     "jest-junit": "16.0.0",
@@ -399,25 +401,28 @@
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "jwt-decode": "3.1.2",
+    "lerna": "7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
-    "nx": "18.0.4",
-    "nx-cloud": "18.0.0",
+    "nx": "17.1.1",
+    "nx-cloud": "16.5.2",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
     "storybook-css-modules": "1.0.8",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "3.3.5",
     "ts-essentials": "9.1.2",
     "ts-jest": "29.1.0",
     "ts-morph": "19.0.0",
     "ts-node": "10.9.1",
-    "typescript": "5.3.3",
+    "typescript": "5.2.2",
     "utility-types": "3.10.0",
     "wait-on": "6.0.1"
   },
   "resolutions": {
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
+    "@opentelemetry/sdk-trace-base": "1.14.0",
+    "@codemirror/state": "6.2.1",
     "antd@5.4.2": "patch:antd@npm%3A5.4.2#./.yarn/patches/antd-npm-5.4.2-0091a657e9.patch",
     "cypress@*": "patch:cypress@npm%3A13.3.0#./.yarn/patches/cypress-npm-13.3.0-c09c0b93ba.patch",
     "cypress@^13.3.0": "patch:cypress@npm%3A13.3.0#./.yarn/patches/cypress-npm-13.3.0-c09c0b93ba.patch"
