--- a/.env.test.example
+++ b/.env.test.example
@@ -16,10 +16,11 @@ NEXT_PUBLIC_PLATFORM_API_PORT=4001
 # A long secret value used to encrypt the session cookie
 AUTH0_SECRET=
 # The url of your Auth0 tenant hooks
-AUTH0_ISSUER_BASE_URL=https://codelab-app-dev.us.auth0.com/
+AUTH0_ISSUER_BASE_URL=https://codelab-app-test.us.auth0.com/
 # Your Auth0 application's Client ID
-AUTH0_CLIENT_ID=vFxazFdMcHzjC90Y4CxWxT34gvZJjh76
+AUTH0_CLIENT_ID=HiPyR5vYBcMhpydeIzgAzhji5QHXldi7
 # Your Auth0 application's Client Secret
 AUTH0_CLIENT_SECRET=
 # Required for `initAuth0`
 AUTH0_AUDIENCE=https://codelab-app-test.us.auth0.com/api/v2/
+AUTH0_BASE_URL=http://127.0.0.1:3001
