--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
       - run: npx cypress install
       - run: npx cypress verify
       - run:
-          command: npx nx e2e platform-e2e -c ci --verbose
+          command: npx nx e2e platform-e2e -c ci
           name: Run E2E Tests
       - store_artifacts:
           destination: cypress/videos
@@ -381,6 +381,7 @@ jobs:
           path: ./tmp/reports/test-unit
 orbs:
   node: circleci/node@5.1.0
+  nx: nrwl/nx@1.6.2
   queue: eddiewebb/queue@2.2.1
   slack: circleci/slack@4.12.5
   swissknife: roopakv/swissknife@0.69.0
