test(apps-platform-e2e): setup system data before cypress
test(apps-platform-e2e): setup system data before cypress

test(apps-platform-e2e): setup system data before cypress

test(apps-platform-e2e): setup system data before cypress

--- a/libs/backend/application/auth/project.json
+++ b/libs/backend/application/auth/project.json
@@ -19,5 +19,5 @@
       }
     }
   },
-  "tags": ["scope:backend", "layer:application"]
+  "tags": ["scope:backend", "layer:application", "projectType:library"]
 }
