--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "commit": "git-cz",
     "cpack": "scripts/circleci/circleci-pack.sh",
     "git:prune": "git gc --aggressive --prune=now",
-    "project:update": "nx build tools-workspace && yarn && nx generate @codelab/workspace:nx-project-config"
+    "project:update": "nx build tools-workspace && yarn && nx generate @codelab/workspace:nx-project-config",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -390,7 +391,7 @@
     "futoin-hkdf": "1.4.3",
     "git-changed-files": "1.0.0",
     "globby": "11.1.0",
-    "husky": "8.0.0",
+    "husky": "^9.0.11",
     "inquirer": "8.2.2",
     "is-port-reachable": "3.1.0",
     "jest": "29.7.0",
