wip(apps-platform-e2e): adding storybook

--- a/libs/backend/domain/shared/modules/project.json
+++ b/libs/backend/domain/shared/modules/project.json
@@ -24,6 +24,7 @@
     "projectType:library",
     "type:concrete",
     "scope:backend",
-    "layer:domain"
+    "scope:shared"
+    // "layer:domain"
   ]
 }
