--- a/libs/frontend/application/shared/store/tsconfig.lib.json
+++ b/libs/frontend/application/shared/store/tsconfig.lib.json
@@ -6,8 +6,7 @@
   },
   "files": [
     "../../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
-    "../../../../../node_modules/@nx/react/typings/image.d.ts",
-    "./src/IStoreContext.ts"
+    "../../../../../node_modules/@nx/react/typings/image.d.ts"
   ],
   "exclude": [
     "jest.config.ts",
